# agl

./: .gitignore  CMakeLists.txt  README.md  agl.c  agl.cmake  agl_gfx.h  agl_math.h  agl_plugin.h
bindings/luajit/: agl.lua  example2d.lua  example3d.lua
plugins/: fps_counter.c  gltf_loader.cpp
tests/: gfx_test.c  math_test.c
